Adding beginning styling and starter elements to index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChefAid</title>
     <link rel="shortcut icon" type="image/jpg" href="/css/img/favicon.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/js/script.js" defer></script>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <nav id="nav-bar">
+            <div id="logo">
+                <h2>ChefAid</h2>
+            </div>
+            <ul id="nav-menu">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="part-1" class="container">
+            <h1>What would you like to cook?</h1>
+            <input type="text" name="" id="search">
+        </section>
+        <section class="container">
+            <h3>Suggested Recipes:</h3>
+            <div id="recipe-list">
+                <div class="card">
+                    <div class="ct-area">
+                        <p class="card-title">Penne pasta tomato</p>
+                        <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="ct-area">
+                        <p class="card-title">Penne pasta tomato</p>
+                        <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
+                    </div>
+                </div>
+            </div>
+            
+            
+        </section>
+    </main>
+    <footer>
+        <p>Dummy Content</p>
+        <p>Dummy Content</p>
+        <p>Dummy Content</p>
+    </footer>
 </body>
 
 </html>
