--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChefAid</title>
+    <script src="https://kit.fontawesome.com/6f52d8e203.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/jpg" href="/css/img/favicon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/js/script.js" defer></script>
+
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -19,36 +21,30 @@
             <div id="logo">
                 <h2>ChefAid</h2>
             </div>
-            <ul id="nav-menu">
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
+            <div id="nav-icon">
+                <img src="/css/img/logo-500.png" alt="">
+            </div>
         </nav>
     </header>
     <main>
-        <section id="part-1" class="container">
+        <section id="intro" class="container">
             <h1>What would you like to cook?</h1>
-            <input type="text" name="" id="search">
+            <form>
+                <input type="text" placeholder="Search Recipe" />
+            </form>
         </section>
         <section class="container">
-            <h3>Suggested Recipes:</h3>
-            <div id="recipe-list">
+            <h2>Suggested Recipes:</h2>
+            <div id="recipes">
                 <div class="card">
+                    <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                        alt="">
                     <div class="ct-area">
-                        <p class="card-title">Penne pasta tomato</p>
-                        <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="ct-area">
-                        <p class="card-title">Penne pasta tomato</p>
+                        <h3 class="card-title">Penne pasta tomato</h3>
                         <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
                     </div>
                 </div>
             </div>
-            
-            
         </section>
     </main>
     <footer>
