Adding updated styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <section id="intro" class="container">
             <h1>What would you like to cook?</h1>
             <form>
-                <input type="text" placeholder="Search Recipe" />
+                <i class="fas fa-search"></i>
+                <input type="text" placeholder="Search for recipe..." />
             </form>
         </section>
         <section class="container">
