--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
 <!-- Made by Matt Czencz, 08/28/2021-->
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChefAid</title>
-    <script src="https://kit.fontawesome.com/6f52d8e203.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/6f52d8e203.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="shortcut icon" type="image/jpg" href="/css/img/favicon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/js/script.js" defer></script>
 
-    <link rel="stylesheet" href="/css/style.css">
-</head>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav id="nav-bar">
-            <div id="logo">
-                <h2>ChefAid</h2>
-            </div>
-            <div id="nav-icon">
-                <img src="/css/img/logo-500.png" alt="">
-            </div>
-        </nav>
+      <nav id="nav-bar">
+        <div id="menu">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div id="logo">
+          <img src="/css/img/logo-500.png" alt="" />
+        </div>
+      </nav>
     </header>
     <main>
-        <section id="intro" class="container">
-            <h1>What would you like to cook?</h1>
-            <form>
-                <i class="fas fa-search"></i>
-                <input type="text" placeholder="Search for recipe..." />
-            </form>
-        </section>
-        <section class="container">
-            <h2>Suggested Recipes:</h2>
-            <div id="recipes">
-                <div class="card">
-                    <img src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
-                        alt="">
-                    <div class="ct-area">
-                        <h3 class="card-title">Penne pasta tomato</h3>
-                        <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
-                    </div>
+      <section id="intro" class="container">
+        <h1>What would you like to cook?</h1>
+        <form>
+          <i class="fas fa-search"></i>
+          <input type="text" placeholder="Search for recipe..." />
+        </form>
+      </section>
+      <section class="container">
+        <h2>Suggested Recipes:</h2>
+        <div id="recipes">
+          <div class="card">
+            <div id="card-header">
+              <img
+                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                alt=""
+              />
+              <div class="ct-area">
+                <h3 class="card-title">Penne pasta tomato</h3>
+                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
+                <div id="tag-area">
+                  <div class="tag" id="cal">Calories</div>
+                  <div class="tag" id="fat">Fat</div>
+                  <div class="tag" id="sug">Sodium</div>
                 </div>
+                <p class="inst-link">View Instructions</p>
+              </div>
             </div>
-        </section>
+
+            <div id="instruction-area">
+              <h3>Instructions</h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <p>Dummy Content</p>
-        <p>Dummy Content</p>
-        <p>Dummy Content</p>
+      <p>Dummy Content</p>
+      <p>Dummy Content</p>
+      <p>Dummy Content</p>
     </footer>
-</body>
-
+  </body>
 </html>
