Added instructions area and added ability to toggle whether the instructions are visible or not

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
                 <p class="inst-link">View Instructions</p>
               </div>
             </div>
-
             <div id="instruction-area">
-              <h3>Instructions</h3>
+              <h3>Instructions:</h3>
             </div>
           </div>
         </div>
