--- a/index.html
+++ b/index.html
@@ -29,16 +29,66 @@
       </nav>
     </header>
     <main>
+      <section id="hero" class="container">
+        <img src="/css/img/cooking.png">
+        <div>
+          <img src="/css/img/logo-500.png">
+          <h1>ChefAid</h1>
+          <p>Cookbooks are a thing of the past! Get unlimited recipes on your computer, or in your pocket, from chefs all around the world.</p>
+        </div>
+      </section>
       <section id="intro" class="container">
-        <h1>What would you like to cook?</h1>
+        <h2>What would you like to cook?</h2>
         <form>
           <i class="fas fa-search"></i>
           <input type="text" placeholder="Search for recipe..." />
         </form>
       </section>
       <section class="container">
-        <h2>Suggested Recipes:</h2>
+        <h3>Suggested Recipes:</h3>
         <div id="recipes">
+          <div class="card">
+            <div id="card-header">
+              <img
+                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                alt=""
+              />
+              <div class="ct-area">
+                <h3 class="card-title">Penne pasta tomato</h3>
+                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
+                <div id="tag-area">
+                  <div class="tag" id="cal">Calories</div>
+                  <div class="tag" id="fat">Fat</div>
+                  <div class="tag" id="sug">Sodium</div>
+                </div>
+                <p class="inst-link">View Instructions</p>
+              </div>
+            </div>
+            <div id="instruction-area">
+              <h3>Instructions:</h3>
+            </div>
+          </div>
+          <div class="card">
+            <div id="card-header">
+              <img
+                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
+                alt=""
+              />
+              <div class="ct-area">
+                <h3 class="card-title">Penne pasta tomato</h3>
+                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
+                <div id="tag-area">
+                  <div class="tag" id="cal">Calories</div>
+                  <div class="tag" id="fat">Fat</div>
+                  <div class="tag" id="sug">Sodium</div>
+                </div>
+                <p class="inst-link">View Instructions</p>
+              </div>
+            </div>
+            <div id="instruction-area">
+              <h3>Instructions:</h3>
+            </div>
+          </div>
           <div class="card">
             <div id="card-header">
               <img
