Added responsive styling and footer content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </section>
       <section id="intro" class="container">
-        <h2>What would you like to cook?</h2>
+        <h2>What would you like to cook with?</h2>
         <form>
           <i class="fas fa-search"></i>
           <input type="text" placeholder="Search for recipe..." />
@@ -114,9 +114,9 @@
       </section>
     </main>
     <footer>
-      <p>Dummy Content</p>
-      <p>Dummy Content</p>
-      <p>Dummy Content</p>
+      <p>ChefAid</p>
+      <p>Made by Matt Czencz</p>
+      <p>2021</p>
     </footer>
   </body>
 </html>
