Added temporary text and removed dummy cards

--- a/index.html
+++ b/index.html
@@ -47,69 +47,7 @@
       <section class="container">
         <h3>Suggested Recipes:</h3>
         <div id="recipes">
-          <div class="card">
-            <div id="card-header">
-              <img
-                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
-                alt=""
-              />
-              <div class="ct-area">
-                <h3 class="card-title">Penne pasta tomato</h3>
-                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
-                <div id="tag-area">
-                  <div class="tag" id="cal">Calories</div>
-                  <div class="tag" id="fat">Fat</div>
-                  <div class="tag" id="sug">Sodium</div>
-                </div>
-                <p class="inst-link">View Instructions</p>
-              </div>
-            </div>
-            <div id="instruction-area">
-              <h3>Instructions:</h3>
-            </div>
-          </div>
-          <div class="card">
-            <div id="card-header">
-              <img
-                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
-                alt=""
-              />
-              <div class="ct-area">
-                <h3 class="card-title">Penne pasta tomato</h3>
-                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
-                <div id="tag-area">
-                  <div class="tag" id="cal">Calories</div>
-                  <div class="tag" id="fat">Fat</div>
-                  <div class="tag" id="sug">Sodium</div>
-                </div>
-                <p class="inst-link">View Instructions</p>
-              </div>
-            </div>
-            <div id="instruction-area">
-              <h3>Instructions:</h3>
-            </div>
-          </div>
-          <div class="card">
-            <div id="card-header">
-              <img
-                src="https://images.unsplash.com/photo-1484723091739-30a097e8f929?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=987&q=80"
-                alt=""
-              />
-              <div class="ct-area">
-                <h3 class="card-title">Penne pasta tomato</h3>
-                <p class="card-stat">30 MIN <span class="line">|</span> EASY</p>
-                <div id="tag-area">
-                  <div class="tag" id="cal">Calories</div>
-                  <div class="tag" id="fat">Fat</div>
-                  <div class="tag" id="sug">Sodium</div>
-                </div>
-                <p class="inst-link">View Instructions</p>
-              </div>
-            </div>
-            <div id="instruction-area">
-              <h3>Instructions:</h3>
-            </div>
-          </div>
+          <p id="temporary">Search to show recipe results...</p>
         </div>
       </section>
     </main>
