Fixed spacing issues, finished footer area

--- a/index.html
+++ b/index.html
@@ -1,60 +1,82 @@
 <!DOCTYPE html>
 <!-- Made by Matt Czencz, 08/28/2021-->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChefAid</title>
-    <script
-      src="https://kit.fontawesome.com/6f52d8e203.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="shortcut icon" type="image/jpg" href="/css/img/favicon.png" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/script.js" defer></script>
 
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ChefAid</title>
+  <script src="https://kit.fontawesome.com/6f52d8e203.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/jpg" href="/css/img/favicon.png" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/script.js" defer></script>
 
-  <body>
-    <header>
-      <nav id="nav-bar">
-        <div id="menu">
-          <i class="fas fa-bars"></i>
-        </div>
-        <div id="logo">
-          <img src="/css/img/logo-500.png" alt="" />
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section id="hero" class="container">
-        <img src="/css/img/cooking.png">
-        <div>
-          <img src="/css/img/logo-500.png">
-          <h1>ChefAid</h1>
-          <p>Cookbooks are a thing of the past! Get unlimited recipes on your computer, or in your pocket, from chefs all around the world.</p>
-        </div>
-      </section>
-      <section id="intro" class="container">
-        <h2>What would you like to cook with?</h2>
-        <form>
-          <i class="fas fa-search"></i>
-          <input type="text" placeholder="Search for recipe..." />
-        </form>
-      </section>
-      <section class="container">
-        <h3>Suggested Recipes:</h3>
-        <div id="recipes">
-          <p id="temporary">Search to show recipe results...</p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <p>ChefAid</p>
-      <p>Made by Matt Czencz</p>
-      <p>2021</p>
-    </footer>
-  </body>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+
+<body>
+  <header>
+    <nav id="nav-bar">
+      <div id="menu">
+        <i class="fas fa-bars"></i>
+      </div>
+      <div id="logo">
+        <img src="/css/img/logo-500.png" alt="" />
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section id="hero" class="container">
+      <img src="/css/img/cooking.png">
+      <div>
+        <img src="/css/img/logo-500.png">
+        <h1>ChefAid</h1>
+        <p>Cookbooks are a thing of the past! Get unlimited recipes on your computer, or in your pocket, from chefs all
+          around the world.</p>
+      </div>
+    </section>
+    <section id="intro" class="container">
+      <h2>What would you like to cook with?</h2>
+      <form>
+        <i class="fas fa-search"></i>
+        <input type="text" placeholder="Search for recipe..." />
+      </form>
+    </section>
+    <section id="result-area" class="container">
+      <h3>Suggested Recipes:</h3>
+      <div id="recipes">
+        <p id="temporary">Search to show recipe results...</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="widget">
+      <h2>About us</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum debitis iusto minima dolor odio nulla tenetur
+        repellendus similique numquam vero at corrupti omnis libero praesentium, dicta optio! Accusamus, et molestiae.
+      </p>
+    </div>
+    <div class="widget">
+      <h2>Submit a recipe</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum debitis iusto minima dolor odio nulla tenetur
+        repellendus similique numquam vero at corrupti omnis libero praesentium, dicta optio! Accusamus, et molestiae.
+      </p>
+    </div>
+    <div class="widget">
+      <h2>What we do</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum debitis iusto minima dolor odio nulla tenetur
+        repellendus similique numquam vero at corrupti omnis libero praesentium, dicta optio! Accusamus, et molestiae.
+      </p>
+    </div>
+    <div class="copyright">
+      <p>Made by Matt Czencz - 2021</p>
+      <div>
+        <img src="/css/img/favicon.png" alt="">
+        <p>ChefAid</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
