Changed image styling to image on top of card, updated responsive styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <!-- Nav Menu -->
   <header>
     <nav id="nav-bar">
       <div id="menu">
@@ -27,6 +28,8 @@
     </nav>
   </header>
   <main>
+    
+    <!-- Hero Section -->
     <section id="hero" class="container">
       <img src="/css/img/cooking.png">
       <div>
@@ -36,6 +39,8 @@
           around the world.</p>
       </div>
     </section>
+
+    <!-- Search Section -->
     <section id="intro" class="container">
       <h2>What would you like to cook with?</h2>
       <form>
@@ -43,6 +48,8 @@
         <input type="text" placeholder="Search for recipe..." />
       </form>
     </section>
+
+    <!-- Results Section -->
     <section id="result-area" class="container">
       <h3>Suggested Recipes:</h3>
       <div id="recipes">
@@ -50,6 +57,8 @@
       </div>
     </section>
   </main>
+
+  <!-- Footer -->
   <footer>
     <div class="widget">
       <h2>About us</h2>
@@ -69,6 +78,8 @@
         repellendus similique numquam vero at corrupti omnis libero praesentium, dicta optio! Accusamus, et molestiae.
       </p>
     </div>
+
+    <!-- Copyright Area -->
     <div class="copyright">
       <p>Made by Matt Czencz - 2021</p>
       <div>
